Fixed: Simple App link

--- a/Chau Ngo.html
+++ b/Chau Ngo.html
@@ -118,7 +118,7 @@
       <HR>
       <H2> Web Application Development - MERN (MongoDB, Express, React, Nodejs)</H2>
       <UL>
-         <LI type="1"> <a href="https://chaungo1106.github.io/Contacts-React-App/">A Simple Contacts App</a>, its
+         <LI type="1"> <a href="https://chaungo1106.github.io/Contacts-App/">A Simple Contacts App</a>, its
             basic function
             can add and drop contact information.
       </UL>
